# src/endpoints.js
@@ -1,5 +1,4 @@
 const exportSwaggerEndpoints = (app) => {
-
     // app.get('/users/:id', (req, res) => {
     //     const filter = req.query.filter;
 
@@ -20,25 +19,24 @@ const exportSwaggerEndpoints = (app) => {
             #swagger.summary = 'Returns a user by id'
             #swagger.description = 'This endpoint will return a user by id...'
         */
-        const { name, email, password } = req.body;
+        const { name, email, password } = req.body
 
-        return res.status(201).send();
-    });
+        return res.status(201).send()
+    })
 
     app.post('/api/user/login', (req, res) => {
-        const { email, password } = req.body;
+        const { email, password } = req.body
 
-        return res.status(201).send();
-    });
+        return res.status(201).send()
+    })
 
     app.get('/user/profile', (req, res) => {
-        const filter = req.query.filter;
+        const filter = req.query.filter
 
-        const version = req.headers.version;
+        const version = req.headers.version
 
-        return res.status(200).send("some data");
-    });
-
-};
+        return res.status(200).send('some data')
+    })
+}
 
 export default exportSwaggerEndpoints
